-*- text -*-

Version 1.2 (TODO)
-------------

* Individual-level right-truncation times supported with new "rtrunc"
  argument to flexsurvreg.


Version 1.1.1 (2019-03-18)
-------------

* New type="quantiles" and type="link" for summary.flexsurvreg.
  Thanks to Leonardo Marques for the contribution.  

* Allow different covariates per transition in multi-state models
  supplied as a list of flexsurvreg objects.  Thanks to David
  McAllister for the contribution.

* Bug fix for qllogis with lower.tail=FALSE.

* Bug fix for likelihood when all events are observed.

* Bug fix for "ylim" argument in plot method for survival or
  cumulative hazard.

* Allow dynamic symbols in C code.

* Various other minor code and doc fixes, see github commit history.


Version 1.1 (2017-03-27)
-------------

* Substantial speed improvements in fitting most of the built-in
  models, from implementing their PDFs and CDFs in C++.  Thanks to
  Paul Metcalfe for contributing this.  Results may therefore differ
  from previous versions in edge cases. 

* As a result the package now depends on Rcpp.

* Mean, median and restricted mean included as built-in functions in
  summary.flexsurvreg. Thanks to Jordan Amdahl for the contribution.

* Documentation migrated to roxygen.  Thanks to Paul Metcalfe for the
  contribution.

* Various minor bug fixes, see github commits.


Version 1.0.2 (2016-09-26)
-------------

* Bug fix: "start" was being ignored by plot.flexsurvreg. Thanks to
  Ruth Keogh.

* Built-in distribution names are now case-insensitive.  Thanks to
  Jordan Amdahl.

* Fix for Weibull hazard function to avoid numeric instability.
  Thanks to Jordan Amdahl.

* Fix to hsurvspline when t includes 0.  Thanks to Jordan Amdahl.

* Vectorised parameters supported in qgeneric.


Version 1.0.1 (2016-05-31)
-------------

* Bug fix: covariates were labelled wrongly in summary.flexsurvreg
  tidy output.  Thanks to Owain Saunders.


Version 1.0.0 (2016-05-10)
-------------
